--- a/templates/board/board_form.html
+++ b/templates/board/board_form.html
@@ -9,7 +9,7 @@
             <div class="mdl-grid portfolio-max-width">
              <div class="mdl-card mdl-cell mdl-cell--12-col ">
               <div class="mdl-card__supporting-text">
-                <h4>Create chatting room</h4>
+                <h4>Post</h4>
 
                     <form method="POST">{% csrf_token %}
                     <h4>Title</h4>
